--- a/game.html
+++ b/game.html
@@ -27,6 +27,7 @@
         <button id="next_btn" class="next_button hide">לשאלה הבאה</button>
         <button id="finish_game" class="finish_the_game hide">לצאת מהמשחק</button>
      </div> 
+     <div id="timer_display" class="hide"></div>
     </div>
     <script src = "game.js"></script> 
 </body>
